a few tweaks